reafct: Delete [controller] from route
